Fix collapsed menu vertical scroll

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -54,4 +54,8 @@
   .collapse.in{
     display:block !important;
   }
+  .navbar-collapse.in {
+    overflow-y: auto !important;
+    overflow-x: hidden !important;
+  }
 }
